[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/house/objects/wires/Wires.gd" type="Script" id=1]
[ext_resource path="res://scenes/house/objects/wires/boitier_ferme.png" type="Texture" id=2]
[ext_resource path="res://scenes/house/objects/wires/panneau.png" type="Texture" id=3]
[ext_resource path="res://scenes/house/objects/wires/plaque_ouverte.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 33.7792
height = 45.2682

[sub_resource type="Animation" id=2]
resource_name = "cover_fall"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Cover:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 2, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 11 ), Vector2( 5, 11 ), Vector2( 1.87866, 106.879 ), Vector2( 26.8923, 97.6694 ), Vector2( 40.0117, 113.863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cover:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 2, 1, 1, 1 ),
"update": 0,
"values": [ 4.45261, 4.45261, 75.3956, 90.6472, 90.6472 ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.1

[sub_resource type="Animation" id=4]
resource_name = "wire1"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("panneau:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "wire2"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("panneau:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Wires" type="Area2D"]
position = Vector2( 1260, 420 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )
connected_point = NodePath("../../Points/Point2")

[node name="Box" type="Sprite" parent="."]
position = Vector2( 3.08008, -8.89795 )
scale = Vector2( 0.239235, 0.239235 )
texture = ExtResource( 2 )

[node name="panneau" type="Sprite" parent="."]
position = Vector2( 8.4707, -3.28052 )
rotation = 0.000898734
scale = Vector2( 0.074735, 0.0802506 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 40.0117, 113.863 )
rotation = 1.58209
scale = Vector2( 0.306889, 0.329538 )
texture = ExtResource( 4 )

[node name="Zone" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/cover_fall = SubResource( 2 )
anims/default = SubResource( 3 )
anims/wire1 = SubResource( 4 )
anims/wire2 = SubResource( 5 )
[connection signal="input_event" from="." to="." method="_on_Wires_input_event"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
